tests/baselines/reference/jsFileCompilationTypeOfParameter.errors.txt
tests/cases/compiler/a.js(1,15): error TS8010: 'types' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    function F(a: number) { }
                  ~~~~~~
!!! error TS8010: 'types' can only be used in a .ts file.